--- a/less/creative.less
+++ b/less/creative.less
@@ -122,4 +122,16 @@ header {
     h3 {
         color: @theme-primary;
     }
+    .more-details {
+        height: 220px;
+        span {
+            color: white;
+            background-color: @gray;
+            padding: 10px 25px;
+            cursor: pointer;
+            position: absolute;
+            bottom: 0;
+            right: 15px;
+        }
+    }
 }
