--- a/less/mixins.less
+++ b/less/mixins.less
@@ -55,9 +55,9 @@
 }
 
 .sans-serif-font() {
-	font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+	font-family: EatonBold, 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
 }
 
 .serif-font() {
-  	font-family: EatonBold, sans-serif;
+  	font-family: EatonReg, sans-serif;
 }
