Adicionando routing/ngview e controller da tela Fusível Cartucho

--- a/views/fusivel_cartucho/view.html
+++ b/views/fusivel_cartucho/view.html
@@ -1,1 +1,18 @@
 <p> PÁGINA FUSÍVEL CARTUCHO </p>
+
+<section>
+    <div class="container bg-gray">
+      <div class="row">
+        <table>
+          <tr ng-repeat="item in baseCartucho">
+            <td>{{ item.col1 }}</td>
+            <td>{{ item.col2 }}</td>
+            <td>{{ item.col4 }}</td>
+            <td>{{ item.col4 }}</td>
+            <td>{{ item.col5 }}</td>
+          </tr>
+        </table>
+
+      </div>
+    </div>
+</section>
