Páginas Fusível Cartucho e ELDR (parcial)

--- a/less/creative.less
+++ b/less/creative.less
@@ -135,3 +135,13 @@ header {
         }
     }
 }
+
+.table-header {
+    background-color: @gray-light;
+    height: 22px;
+    color: white;   
+}
+
+.banner-description {
+    background-color: @gray-medium;
+}
