--- a/views/eldr/view.html
+++ b/views/eldr/view.html
@@ -1,1 +1,160 @@
-<p> PÁGINA ELPR </p>
+<section>
+    <div class="container">
+        <div class="row table-header">
+            <div class="col-xs-12">
+                <p>Linha ELDR - Interruptores diferenciais residuais</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12">
+                <img src="img/Banner_Linha-ELDR.jpg" alt="Banner Linha ELDR" width="100%"/>
+            </div>
+        </div>
+        <div class="row banner-description">
+            <div class="col-xs-12">
+               <ul>
+                    <li>Proteção contra fulga;</li>
+                    <li>Tipo eletromagnético;</li>
+                    <li>Indicação de falha de fuga;</li>
+                    <li>Suporte para instalação em trilho DIN (35 mm);</li>
+                    <li>Possibilidade de conexão de cabos de entrada e saída <br/>pela parte superior ou inferior;</li>
+                    <li>Corrente alternada (AC);</li>
+                    <li>Isolamento de barramento;</li>
+                    <li>Borne independente para entrada de barramento de distribuição.</li>
+               </ul>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section>
+    <div class="container bg-gray">
+        <div class="row table-header">
+            <div class="col-xs-12">
+                <p>Código de Chave</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12">
+                <p> 
+                	ELDR - 463 - 30 
+                	<br/>
+                	ESTÁ FALTANDO A IMAGEM CORRETA
+                </p>
+            </div>
+        </div>
+        <div class="row">
+        	<div class="col-xs-12">
+                <img src="img/Pg Linha ELDR/Imagem-01.jpg" alt="Código de Chave" width="100%"/>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section>
+    <div class="container bg-gray">
+        <div class="row table-header">
+            <div class="col-xs-12">
+                <p>Codificação</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-3">
+                <img src="img/Pg Linha ELDR/RCCD63A---ELDR-230V.png" alt="Codificação" width="20%"/>
+            </div>
+            <div class="col-xs-9">
+                <table>                    
+                    <thead>
+                        <tr>
+                            <th>Corrente Nominal In</th>
+                            <th>Corrente Residual In</th>
+                            <th>Número de pólos</th>
+                            <th>Código</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>25A</td>
+                            <td>30mA</td>
+                            <td>2</td>
+                            <td>ELDR-225-30</td>
+                        </tr>
+                        <tr>
+                            <td>40A</td>
+                            <td>30mA</td>
+                            <td>2</td>
+                            <td>ELDR-240-30</td>
+                        </tr>
+                        <tr>
+                            <td>63A</td>
+                            <td>30mA</td>
+                            <td>2</td>
+                            <td>ELDR-263-30</td>
+                        </tr>
+                        <tr>
+                            <td>80A</td>
+                            <td>30mA</td>
+                            <td>2</td>
+                            <td>ELDR-280-30</td>
+                        </tr>
+                        <tr>
+                            <td>25A</td>
+                            <td>30mA</td>
+                            <td>4</td>
+                            <td>ELDR-425-30</td>
+                        </tr>
+                        <tr>
+                            <td>40A</td>
+                            <td>30mA</td>
+                            <td>4</td>
+                            <td>ELDR-440-30</td>
+                        </tr>
+                        <tr>
+                            <td>63A</td>
+                            <td>30mA</td>
+                            <td>4</td>
+                            <td>ELDR-463-30</td>
+                        </tr>
+                        <tr>
+                            <td>80A</td>
+                            <td>30mA</td>
+                            <td>4</td>
+                            <td>ELDR-480-30</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section>
+    <div class="container bg-gray">
+        <div class="row table-header">
+            <div class="col-xs-12">
+                <p>Dimensões</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12">
+                <img src="img/Pg Linha ELDR/Imagem-02.jpg" alt="Dimensões" width="50%"/>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section>
+    <div class="container bg-gray">
+        <div class="row table-header">
+            <div class="col-xs-12">
+                <p>Pólos</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12">
+                <img src="img/Pg Linha ELDR/Imagem-03.jpg" alt="Pólos" width="100%"/>
+            </div>
+        </div>
+    </div>
+</section>
+
