--- a/views/fusivel_cartucho/view.html
+++ b/views/fusivel_cartucho/view.html
@@ -1,6 +1,6 @@
 <section>
     <div class="container">
-        <div class="row">
+        <div class="row table-header">
             <div class="col-xs-12">
                 <p>Fusível Cartucho</p>
             </div>
@@ -10,7 +10,7 @@
                 <img src="img/Banner_Fusível-Cartucho.jpg" alt="Banner Fusível Cartucho" width="100%"/>
             </div>
         </div>
-        <div class="row">
+        <div class="row banner-description">
             <div class="col-xs-12">
                <ul>
                     <li>Projetados para a utilização em equipamentos com pouco espaço físico.</li>
@@ -30,8 +30,8 @@
 
 <!-- Tabela 1 - Base Cartucho -->
 <section>
-    <div class="container">
-        <div class="row">
+    <div class="container bg-gray">
+        <div class="row table-header">
             <div class="col-xs-12">
                 <p>Base Cartucho</p>
             </div>
@@ -82,8 +82,8 @@
 
 <!-- Tabela 2 - Fusível Cartucho - Tipo gL/gG -->
 <section>
-    <div class="container">
-        <div class="row">
+    <div class="container bg-gray">
+        <div class="row table-header">
             <div class="col-xs-12">
                 <p>Fusível Cartucho - Tipo gL/gG</p>
             </div>
@@ -410,8 +410,8 @@
 
 <!-- Tabela 3 - Fusível Cartucho - Tipo aR -->
 <section>
-    <div class="container">
-        <div class="row">
+    <div class="container bg-gray">
+        <div class="row table-header">
             <div class="col-xs-12">
                 <p>Fusível Cartucho - Tipo aR</p>
             </div>
@@ -738,8 +738,8 @@
 
 <!-- Tabela 4 - Fusível Cartucho - Tipo aM -->
 <section>
-    <div class="container">
-        <div class="row">
+    <div class="container bg-gray">
+        <div class="row table-header">
             <div class="col-xs-12">
                 <p>Fusível Cartucho - Tipo aM</p>
             </div>
