--- a/less/variables.less
+++ b/less/variables.less
@@ -9,4 +9,5 @@
 @gray-dark:        lighten(@gray-base, 20%);   // #333
 @gray:             lighten(@gray-base, 33.5%); // #555
 @gray-light:       lighten(@gray-base, 46.7%); // #777
+@gray-medium: 	   lighten(@gray-base, 85%);
 @gray-lighter:     lighten(@gray-base, 93.5%); // #eee
