--- a/less/creative.less
+++ b/less/creative.less
@@ -71,6 +71,7 @@ li {
 .container {
     padding: 0;
 	margin-bottom: 20px;
+	width: 960px;
 }
 
 // Button Styles
@@ -89,7 +90,7 @@ li {
 // Eletromec CSS
 header {
     .container {
-        background-color: @gray-light;
+        background-color: @gray-dark;
         p {
             color: white;
             font-size: 28px;
@@ -230,9 +231,10 @@ table {
 #footer {
     background: #eee;
     position: relative;
-    width: 922px;
+    width: 100%;
     padding: 19px;
     float: left;
+	border-top: 2px solid @theme-primary;
 }
 
 #footer a {
