Desenvolvimento da tela de ELCM

--- a/views/elcm/view.html
+++ b/views/elcm/view.html
@@ -1,1 +1,60 @@
-<p> PÁGINA ELCM </p>
+<section>
+    <div class="container bg-gray-dark banner">
+        <div class="row">
+            <div class="col-xs-12">
+                <h1>Linha ELCM - Disjuntores em caixa moldada</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12">
+                <img src="img/Banner_Linha-ELCM.jpg" alt="Banner Linha ELCM" width="100%" />
+            </div>
+        </div>
+    </div>
+</section>
+
+<section>
+	<div class="container bg-gray">
+		<div class="row">
+            <div class="col-xs-8">
+               <ul>
+                    <li>
+						A linha de disjuntores em caixa moldada ELCM é um novo produto
+						desenvolvido com base em normas internacionais, tecnologia avançada
+						e novo design. Com tensão nominal isolação 800V e a tensão nominal
+						de trabalho até 690V, é adequado para proteção de circuitos com as
+						mais variadas aplicações em frequência de 50/60Hz;
+					</li>
+                    <li>
+						Os disjuntores possuem proteção contra sobrecarga, curto-circuito,
+						função de isolamento, o que pode proteger e evitar danos a instalações
+						e dispositivos elétricos;
+					</li>
+                    <li>
+						Podem ser divididos nos tipos B e C de acordo com sua capacidade
+						máxima de interrupção em curto-circuito;
+					</li>
+                    <li>
+						Vantajoso por ser compacto, adequada capacidade de interrupção;
+					</li>
+					<li>
+						Os disjuntores Eletromec tem função de isolamento;
+					</li>
+					<li>
+						O produto está em conformidade com a norma IEC60947-2.
+					</li>
+               </ul>
+            </div>
+        </div>
+	</div>
+</section>
+
+<section>
+    <div class="container bg-gray-dark section-header">
+        <div class="row">
+            <div class="col-xs-12">
+                <span>Base Cartucho</span>
+            </div>
+        </div>
+    </div>
+</section>
