--- a/views/fusivel_cartucho/view.html
+++ b/views/fusivel_cartucho/view.html
@@ -18,13 +18,13 @@
 		<div class="row">
             <div class="col-xs-12">
                <ul>
-                    <li>Projetados para a utilização em equipamentos com pouco espaço físico.</li>
-                    <li>Tensão 500.</li>
-                    <li>Correntes de 2 a 100A.</li>
-                    <li>Tamanhos: 10x38mm / 14x51mm / 22x58mm.</li>
+                    <li>Projetados para a utilização em equipamentos com pouco espaço físico;</li>
+                    <li>Tensão 500;</li>
+                    <li>Correntes de 2 a 100A;</li>
+                    <li>Tamanhos: 10x38mm / 14x51mm / 22x58mm;</li>
 					<li>Ação: gL/gG - uso geral</li>
 					<ul>
-                        <li>aR - ultrarrápido.</li>
+                        <li>aR - ultrarrápido;</li>
                         <li>aM - motores.</li>
                     </ul>
                </ul>
