--- a/css/creative.css
+++ b/css/creative.css
@@ -60,7 +60,7 @@ li {
   width: 960px;
 }
 .btn-default {
-  color: #222222;
+  color: #57585a;
   background-color: white;
   border-color: white;
   -webkit-transition: all 0.35s;
@@ -73,7 +73,7 @@ li {
 .btn-default:active,
 .btn-default.active,
 .open > .dropdown-toggle.btn-default {
-  color: #222222;
+  color: #57585a;
   background-color: #f2f2f2;
   border-color: #ededed;
 }
@@ -105,7 +105,7 @@ fieldset[disabled] .btn-default.active {
 }
 .btn-default .badge {
   color: white;
-  background-color: #222222;
+  background-color: #57585a;
 }
 .btn-primary {
   background-color: #0089cf;
@@ -130,7 +130,7 @@ header .container .banner-buttons ul > li {
   list-style-type: none;
   display: inline;
   background-color: #eeeeee;
-  padding: 3px 10px;
+  padding: 1px 10px;
   margin-right: 5px;
   cursor: pointer;
   transition: all 0.5s;
@@ -139,10 +139,10 @@ header .container .banner-buttons ul > li:hover {
   background-color: rgba(238, 238, 238, 0.7);
 }
 header .container .banner-buttons .active {
-  background-color: #222222;
+  background-color: #57585a;
 }
 header .container .banner-buttons .active:hover {
-  background-color: #222222;
+  background-color: #57585a;
 }
 .bg-white {
   background-color: white;
@@ -155,6 +155,9 @@ header .container .banner-buttons .active:hover {
 .bg-gray-light {
   background-color: #e6e7e9;
 }
+.bg-gray-light .content-group {
+  margin-top: 20px;
+}
 .bg-gray-light p {
   font-size: 16px;
   color: #808285;
@@ -165,17 +168,30 @@ header .container .banner-buttons .active:hover {
 .bg-gray-light h3 {
   color: #0089cf;
 }
+.bg-gray-light ul {
+  padding-left: 20px;
+}
+.bg-gray-light ul > li {
+  font-size: 16px;
+  color: #808285;
+}
 .bg-gray-light .more-details {
   height: 220px;
 }
 .bg-gray-light .more-details span {
-  color: white;
-  background-color: #d1d2d4;
+  background-color: #808285;
   padding: 10px 25px;
   cursor: pointer;
   position: absolute;
   bottom: 0;
   right: 15px;
+  transition: all 0.5s;
+}
+.bg-gray-light .more-details span a {
+  color: white;
+}
+.bg-gray-light .more-details span:hover {
+  background-color: rgba(128, 130, 133, 0.7);
 }
 .bg-gray-dark {
   background-color: #808285;
@@ -230,6 +246,10 @@ table .img-column {
   background-color: #e6e7e9;
   border: 2px solid #e6e7e9 !important;
   vertical-align: middle!important;
+}
+table .empty-column img,
+table .img-column img {
+  padding: 0 10px;
 }
 table tbody > tr > td {
   color: black;
