--- a/less/creative.less
+++ b/less/creative.less
@@ -103,7 +103,7 @@ header {
                 list-style-type: none;
                 display: inline;
                 background-color: @gray-lighter;
-                padding: 3px 10px;
+                padding: 1px 10px;
                 margin-right: 5px;
                 cursor: pointer;
                 transition: all 0.5s;
@@ -132,6 +132,9 @@ header {
 
 .bg-gray-light {
     background-color: @gray-light;
+	.content-group {
+		margin-top: 20px;
+	}
     p {
         font-size: 16px;
         color: @gray-dark;
@@ -142,17 +145,30 @@ header {
     h3 {
         color: @theme-primary;
     }
+	ul {
+		padding-left: 20px;
+	}
+	ul > li {
+		font-size: 16px;
+        color: @gray-dark;
+	}
     .more-details {
         height: 220px;
         span {
-            color: white;
-            background-color: @gray;
+            background-color: @gray-dark;
             padding: 10px 25px;
             cursor: pointer;
             position: absolute;
             bottom: 0;
             right: 15px;
+			transition: all 0.5s;
+			a {
+				color: white;
+			}
         }
+		span:hover {
+			background-color: fade(@gray-dark, 70%);
+		}
     }
 }
 
@@ -212,6 +228,9 @@ table {
 		background-color: @gray-light;
 		border: 2px solid @gray-light!important;
 		vertical-align: middle!important;
+		img {
+			padding: 0 10px;
+		}
 	}
 	tbody > tr > td {
 		color: black;
