--- a/less/variables.less
+++ b/less/variables.less
@@ -5,7 +5,7 @@
 @theme-primary:    #0089cf;
 
 @gray-base:        #000;
-@gray-darker:      lighten(@gray-base, 13.5%); // #222
+@gray-darker:      #57585a;
 @gray-dark:        #808285;
 @gray:             #d1d2d4;
 @gray-light:       #e6e7e9;
