Desenvolvimento da tela de ELCM

--- a/views/elcm/view.html
+++ b/views/elcm/view.html
@@ -53,8 +53,82 @@
     <div class="container bg-gray-dark section-header">
         <div class="row">
             <div class="col-xs-12">
-                <span>Base Cartucho</span>
+                <span>Chave de código</span>
             </div>
         </div>
     </div>
+</section>
+
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <span>FALTA A IMAGEM</span>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section>
+	<div class="container bg-white">
+		<div class="row">
+			<div class="col-xs-12">
+				<h1>Condições normais de instalação:</h1>
+				<ul>
+					<li>Altura acima do nível do mar: ≤ 2000m;</li>
+					<li>Temperatura ambiente médio: ≤ 40°C ≥ -5°C;</li>
+					<li>Grau de proteção IP 40;</li>
+					<li>Grau de poluição 3.</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+</section>
+
+<section>
+    <div class="container bg-gray-dark section-header">
+        <div class="row">
+            <div class="col-xs-12">
+                <span>Codificação</span>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section>
+	<div class="container bg-gray-light">
+		<div class="row">
+            <div class="col-xs-12">
+                <table class="table table-bordered">
+                    <thead>
+                        <tr>
+							<th class="empty-column" rowspan="2"></th>
+                            <th rowspan="2">Corrente Nominal In</th>
+                            <th colspan="3">Capacidade de interrupção</th>
+                            <th rowspan="2">Número de pólos</th>
+                            <th rowspan="2">Código</th>
+                        </tr>
+						<tr>
+							<th>240V</th>
+							<th>415-440V</th>
+							<th>690V</th>
+						</tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+							<td rowspan="3" class="img-column">
+								<img src="img/Fusíveis Cartucho/Base-Cartucho.png" alt="Base Cartucho" height="100px" />
+							</td>
+                            <td>16A</td>
+                            <td>50kA</td>
+                            <td>20kA</td>
+                            <td>-</td>
+							<td>3</td>
+                            <td class="highlight-column">ELCM1-B316</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+	</div>
 </section>
