--- a/less/creative.less
+++ b/less/creative.less
@@ -243,6 +243,17 @@ table {
 		background-color: @blue-highlight;
 		.sans-serif-font;
 	}
+	tbody > .highlight-row > td {
+		background-color: @blue-highlight;
+	}
+	tbody > .highlight-row > td:last-child {
+		.sans-serif-font;
+		font-weight: bold;
+	}
+	tbody > .highlight-row-gray > td:last-child {
+		.sans-serif-font;
+		font-weight: bold;
+	}
 }
 
 /* Classes Footer - Eaton */
