--- a/views/elcm/view.html
+++ b/views/elcm/view.html
@@ -103,9 +103,9 @@
                     <thead>
                         <tr>
 							<th class="empty-column" rowspan="2"></th>
-                            <th rowspan="2">Corrente Nominal In</th>
+                            <th rowspan="2">Corrente Nominal </br>In</th>
                             <th colspan="3">Capacidade de interrupção</th>
-                            <th rowspan="2">Número de pólos</th>
+                            <th rowspan="2">Número de </br>pólos</th>
                             <th rowspan="2">Código</th>
                         </tr>
 						<tr>
@@ -116,8 +116,8 @@
                     </thead>
                     <tbody>
                         <tr>
-							<td rowspan="3" class="img-column">
-								<img src="img/Fusíveis Cartucho/Base-Cartucho.png" alt="Base Cartucho" height="100px" />
+							<td rowspan="7" class="img-column">
+								<img src="img/Pg Linha ELCM/ELCM1-63.png" alt="ELCM1-63" height="100px" />
 							</td>
                             <td>16A</td>
                             <td>50kA</td>
@@ -126,9 +126,336 @@
 							<td>3</td>
                             <td class="highlight-column">ELCM1-B316</td>
                         </tr>
+						<tr>
+                            <td>20A</td>
+                            <td>50kA</td>
+                            <td>20kA</td>
+                            <td>-</td>
+							<td>3</td>
+                            <td class="highlight-column">ELCM1-B320</td>
+                        </tr>
+						<tr>
+                            <td>25A</td>
+                            <td>50kA</td>
+                            <td>20kA</td>
+                            <td>-</td>
+							<td>3</td>
+                            <td class="highlight-column">ELCM1-B325</td>
+                        </tr>
+						<tr>
+                            <td>32A</td>
+                            <td>50kA</td>
+                            <td>20kA</td>
+                            <td>-</td>
+							<td>3</td>
+                            <td class="highlight-column">ELCM1-B332</td>
+                        </tr>
+						<tr>
+                            <td>40A</td>
+                            <td>50kA</td>
+                            <td>20kA</td>
+                            <td>-</td>
+							<td>3</td>
+                            <td class="highlight-column">ELCM1-B340</td>
+                        </tr>
+						<tr>
+                            <td>50A</td>
+                            <td>50kA</td>
+                            <td>20kA</td>
+                            <td>-</td>
+							<td>3</td>
+                            <td class="highlight-column">ELCM1-B350</td>
+                        </tr>
+						<tr>
+                            <td>63A</td>
+                            <td>50kA</td>
+                            <td>20kA</td>
+                            <td>-</td>
+							<td>3</td>
+                            <td class="highlight-column">ELCM1-B363</td>
+                        </tr>
+						<tr>
+							<td rowspan="8" class="img-column">
+								<img src="img/Pg Linha ELCM/ELCM2-125.png" alt="ELCM2-125" height="100px" />
+							</td>
+                            <td>25A</td>
+                            <td>60kA</td>
+                            <td>25kA</td>
+                            <td>15kA</td>
+							<td>3</td>
+                            <td class="highlight-column">ELCM2-B325</td>
+                        </tr>
+						<tr>
+                            <td>32A</td>
+                            <td>60kA</td>
+                            <td>25kA</td>
+                            <td>15kA</td>
+							<td>3</td>
+                            <td class="highlight-column">ELCM2-B332</td>
+                        </tr>
+						<tr>
+                            <td>40A</td>
+                            <td>60kA</td>
+                            <td>25kA</td>
+                            <td>15kA</td>
+							<td>3</td>
+                            <td class="highlight-column">ELCM2-B340</td>
+                        </tr>
+						<tr>
+                            <td>50A</td>
+                            <td>60kA</td>
+                            <td>25kA</td>
+                            <td>15kA</td>
+							<td>3</td>
+                            <td class="highlight-column">ELCM2-B350</td>
+                        </tr>
+						<tr>
+                            <td>63A</td>
+                            <td>60kA</td>
+                            <td>25kA</td>
+                            <td>15kA</td>
+							<td>3</td>
+                            <td class="highlight-column">ELCM2-B363</td>
+                        </tr>
+						<tr>
+                            <td>80A</td>
+                            <td>60kA</td>
+                            <td>25kA</td>
+                            <td>15kA</td>
+							<td>3</td>
+                            <td class="highlight-column">ELCM2-B380</td>
+                        </tr>
+						<tr>
+                            <td>100A</td>
+                            <td>60kA</td>
+                            <td>25kA</td>
+                            <td>15kA</td>
+							<td>3</td>
+                            <td class="highlight-column">ELCM2-B3100</td>
+                        </tr>
+						<tr>
+							<td>125A</td>
+							<td>60kA</td>
+							<td>25kA</td>
+							<td>15kA</td>
+							<td>3</td>
+							<td class="highlight-column">ELCM2-B3125</td>
+						</tr>
+						<tr>
+							<td rowspan="5" class="img-column">
+								<img src="img/Pg Linha ELCM/ELCM3-250.png" alt="ELCM3-250" height="100px" />
+							</td>
+                            <td>125A</td>
+                            <td>60kA</td>
+                            <td>35kA</td>
+                            <td>10kA</td>
+							<td>3</td>
+                            <td class="highlight-column">ELCM3-C3125</td>
+                        </tr>
+						<tr>
+                            <td>160A</td>
+                            <td>60kA</td>
+                            <td>35kA</td>
+                            <td>10kA</td>
+							<td>3</td>
+                            <td class="highlight-column">ELCM3-C3160</td>
+                        </tr>
+						<tr>
+                            <td>200A</td>
+                            <td>60kA</td>
+                            <td>35kA</td>
+                            <td>10kA</td>
+							<td>3</td>
+                            <td class="highlight-column">ELCM3-C3200</td>
+                        </tr>
+						<tr>
+                            <td>225A</td>
+                            <td>60kA</td>
+                            <td>35kA</td>
+                            <td>10kA</td>
+							<td>3</td>
+                            <td class="highlight-column">ELCM3-C3225</td>
+                        </tr>
+						<tr>
+                            <td>250A</td>
+                            <td>60kA</td>
+                            <td>35kA</td>
+                            <td>10kA</td>
+							<td>3</td>
+                            <td class="highlight-column">ELCM3-C3250</td>
+                        </tr>
+						<tr>
+							<td rowspan="3" class="img-column">
+								<img src="img/Pg Linha ELCM/ELCM4-400.png" alt="ELCM4-400" height="100px" />
+							</td>
+                            <td>315A</td>
+                            <td>60kA</td>
+                            <td>35kA</td>
+                            <td>15kA</td>
+							<td>3</td>
+                            <td class="highlight-column">ELCM4-C3315</td>
+                        </tr>
+						<tr>
+                            <td>350A</td>
+                            <td>60kA</td>
+                            <td>35kA</td>
+                            <td>15kA</td>
+							<td>3</td>
+                            <td class="highlight-column">ELCM4-C3350</td>
+                        </tr>
+						<tr>
+                            <td>400A</td>
+                            <td>60kA</td>
+                            <td>35kA</td>
+                            <td>15kA</td>
+							<td>3</td>
+                            <td class="highlight-column">ELCM4-C3400</td>
+                        </tr>
+						<tr>
+							<td rowspan="2" class="img-column">
+								<img src="img/Pg Linha ELCM/ELCM5-630.png" alt="ELCM5-630" height="100px" />
+							</td>
+                            <td>500A</td>
+                            <td>65kA</td>
+                            <td>35kA</td>
+                            <td>15kA</td>
+							<td>3</td>
+                            <td class="highlight-column">ELCM5-C3500</td>
+                        </tr>
+						<tr>
+                            <td>630A</td>
+                            <td>65kA</td>
+                            <td>35kA</td>
+                            <td>15kA</td>
+							<td>3</td>
+                            <td class="highlight-column">ELCM5-C3630</td>
+                        </tr>
+						<tr>
+							<td rowspan="2" class="img-column">
+								<img src="img/Pg Linha ELCM/ELCM6-800.png" alt="ELCM6-800" height="100px" />
+							</td>
+                            <td>700A</td>
+                            <td>70kA</td>
+                            <td>35kA</td>
+                            <td>15kA</td>
+							<td>3</td>
+                            <td class="highlight-column">ELCM6-C3700</td>
+                        </tr>
+						<tr>
+                            <td>800A</td>
+                            <td>70kA</td>
+                            <td>35kA</td>
+                            <td>15kA</td>
+							<td>3</td>
+                            <td class="highlight-column">ELCM6-C3800</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
         </div>
+	</div>
+</section>
+
+<section>
+	<div class="container bg-white">
+		<div class="row">
+			<div class="col-xs-12">
+				<h1>Utilização e manutenção</h1>
+				<ul>
+					<li>Qualquer característica e acessório da linha ELCM é definido pela fábrica;</li>
+					<li>Os disjuntores já são testados previamente e estão aptos a trabalhar normalmente após sua instalação.</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+</section>
+
+<section>
+    <div class="container bg-gray-dark section-header">
+        <div class="row">
+            <div class="col-xs-12">
+                <span>Acessórios</span>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section>
+	<div class="container bg-gray-light">
+		<div class="row">
+            <div class="col-xs-12">
+                <table class="table table-bordered">
+                    <thead>
+                        <tr>
+                            <th>Tipo</th>
+                            <th>Usar com</th>
+                            <th>Código</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr class="highlight-row-gray">
+                            <td>Disparador de abertura - 230V</td>
+                            <td>ELCM1</td>
+                            <td>ELCM1-ST230</td>
+                        </tr>
+						<tr class="highlight-row-gray">
+                            <td>Disparador de abertura - 230V</td>
+                            <td>ELCM2</td>
+                            <td>ELCM2-ST230</td>
+                        </tr>
+						<tr class="highlight-row-gray">
+                            <td>Disparador de abertura - 230V</td>
+                            <td>ELCM3</td>
+                            <td>ELCM3-ST230</td>
+                        </tr>
+						<tr class="highlight-row-gray">
+                            <td>Disparador de abertura - 230V</td>
+                            <td>ELCM4</td>
+                            <td>ELCM4-ST230</td>
+                        </tr>
+						<tr class="highlight-row-gray">
+                            <td>Disparador de abertura - 230V</td>
+                            <td>ELCM5</td>
+                            <td>ELCM5-ST230</td>
+                        </tr>
+						<tr class="highlight-row-gray">
+                            <td>Disparador de abertura - 230V</td>
+                            <td>ELCM6</td>
+                            <td>ELCM6-ST230</td>
+                        </tr>
+						<tr class="highlight-row">
+                            <td>Disparador de subtensão - 230V</td>
+                            <td>ELCM1</td>
+                            <td>ELCM1-UV230</td>
+                        </tr>
+						<tr class="highlight-row">
+                            <td>Disparador de subtensão - 230V</td>
+                            <td>ELCM2</td>
+                            <td>ELCM2-UV230</td>
+                        </tr>
+						<tr class="highlight-row">
+                            <td>Disparador de subtensão - 230V</td>
+                            <td>ELCM3</td>
+                            <td>ELCM3-UV230</td>
+                        </tr>
+						<tr class="highlight-row">
+                            <td>Disparador de subtensão - 230V</td>
+                            <td>ELCM4</td>
+                            <td>ELCM4-UV230</td>
+                        </tr>
+						<tr class="highlight-row">
+                            <td>Disparador de subtensão - 230V</td>
+                            <td>ELCM5</td>
+                            <td>ELCM5-UV230</td>
+                        </tr>
+						<tr class="highlight-row">
+                            <td>Disparador de subtensão - 230V</td>
+                            <td>ELCM6</td>
+                            <td>ELCM6-UV230</td>
+                        </tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
 	</div>
 </section>
