--- a/views/footer.html
+++ b/views/footer.html
@@ -5,42 +5,42 @@
 				<footer id="footer">
 				    <div class="footercolumn">
 				        <ul>
-				            <li><a class="footerHeader" href="http://www.eaton.com.br/EatonBR/ProductsSolutions/index.htm">Produtos e Soluções</a></li>
-				            <li><a href="http://www.eaton.com.br/EatonBR/ProductsSolutions/Aviacao/index.htm">Aeroespacial</a></li>
-				            <li><a href="http://www.eaton.com.br/EatonBR/ProductsSolutions/Electrical/index.htm">Energia</a></li>
-				            <li><a href="http://www.eaton.com.br/EatonBR/ProductsSolutions/Filtration/index.htm">Filtração</a></li>
-				            <li><a href="http://www.eaton.com.br/EatonBR/ProductsSolutions/Hydraulics/index.htm">Hidráulico</a></li>
-				            <li><a href="http://www.eaton.com.br/EatonBR/ProductsSolutions/Vehicle/index.htm">Veículo</a></li>
+				            <li><a class="footerHeader" target="_blank" href="http://www.eaton.com.br/EatonBR/ProductsSolutions/index.htm">Produtos e Soluções</a></li>
+				            <li><a target="_blank" href="http://www.eaton.com.br/EatonBR/ProductsSolutions/Aviacao/index.htm">Aeroespacial</a></li>
+				            <li><a target="_blank" href="http://www.eaton.com.br/EatonBR/ProductsSolutions/Electrical/index.htm">Energia</a></li>
+				            <li><a target="_blank" href="http://www.eaton.com.br/EatonBR/ProductsSolutions/Filtration/index.htm">Filtração</a></li>
+				            <li><a target="_blank" href="http://www.eaton.com.br/EatonBR/ProductsSolutions/Hydraulics/index.htm">Hidráulico</a></li>
+				            <li><a target="_blank" href="http://www.eaton.com.br/EatonBR/ProductsSolutions/Vehicle/index.htm">Veículo</a></li>
 				        </ul>
 				    </div>
 				    <div class="footercolumn">
 				        <ul>
-				            <li><a class="footerHeader" href="http://www.eaton.com.br/EatonBR/Mercados/index.htm">Mercados da Eaton</a></li>
-				            <li><a href="http://www.eaton.com.br/EatonBR/Mercados/Construcao/index.htm">Construção</a></li>
-				            <li><a href="http://www.eaton.com.br/EatonBR/Mercados/DataCenter/index.htm">Data Center</a></li>
-				            <li><a href="http://www.eaton.com.br/EatonBR/Mercados/Energia/index.htm">Energia</a></li>
-				            <li><a href="http://www.eaton.com.br/EatonBR/Mercados/FabricantesemGeral/index.htm">Fabricantes em Geral</a></li>
+				            <li><a class="footerHeader" target="_blank" href="http://www.eaton.com.br/EatonBR/Mercados/index.htm">Mercados da Eaton</a></li>
+				            <li><a target="_blank" href="http://www.eaton.com.br/EatonBR/Mercados/Construcao/index.htm">Construção</a></li>
+				            <li><a target="_blank" href="http://www.eaton.com.br/EatonBR/Mercados/DataCenter/index.htm">Data Center</a></li>
+				            <li><a target="_blank" href="http://www.eaton.com.br/EatonBR/Mercados/Energia/index.htm">Energia</a></li>
+				            <li><a target="_blank" href="http://www.eaton.com.br/EatonBR/Mercados/FabricantesemGeral/index.htm">Fabricantes em Geral</a></li>
 				        </ul>
 				    </div>
 				    <div class="footercolumn">
 				        <ul>
 				            <li>&nbsp;</li>
-				            <li><a href="http://www.eaton.com.br/EatonBR/Mercados/ManufaturaIndustrias/index.htm">Manufatura &amp; Indústrias</a></li>
-				            <li><a href="http://www.eaton.com.br/EatonBR/Mercados/Químicos/index.htm">Químicos</a></li>
-				            <li><a href="http://www.eaton.com.br/EatonBR/Mercados/Veículos/index.htm">Veículos</a></li>
+				            <li><a target="_blank" href="http://www.eaton.com.br/EatonBR/Mercados/ManufaturaIndustrias/index.htm">Manufatura &amp; Indústrias</a></li>
+				            <li><a target="_blank" href="http://www.eaton.com.br/EatonBR/Mercados/Químicos/index.htm">Químicos</a></li>
+				            <li><a target="_blank" href="http://www.eaton.com.br/EatonBR/Mercados/Veículos/index.htm">Veículos</a></li>
 				        </ul>
 				    </div>
 				    <div class="footercolumn">
 				        <ul>
-				            <li><a class="footerHeader" href="/EatonBR/OurCompany/index.htm">Nossa Empresa</a></li>
-				            <li><a href="http://www.eaton.com.br/EatonBR/OurCompany/AboutUs/index.htm">Quem Somos</a></li>
-				            <li><a href="http://www.eaton.com.br/EatonBR/OurCompany/NewsEvents/index.htm">Notícias &amp; Eventos</a></li>
-				            <li><a href="http://www.eaton.com.br/EatonBR/OurCompany/Operations/index.htm">Operações</a></li>
-				            <li><a href="http://www.eaton.com.br/EatonBR/OurCompany/ServiceProvider/index.htm">Serviço ao Fornecedor</a></li>
-				            <li><a href="http://www.eaton.com.br/EatonBR/OurCompany/WorkatEaton/index.htm">Trabalhe na Eaton</a></li>
-				            <li><a href="http://www.eaton.com.br/EatonBR/OurCompany/CorporateVideos/index.htm">Vídeos de visão geral corporativa</a></li>
-				            <li><a href="http://www.eaton.com.br/EatonBR/OurCompany/CorporateResponsibility/index.htm">Responsabilidade Corporativa</a></li>
-				            <li><a href="http://www.eaton.com.br/EatonBR/OurCompany/Sustainability/index.htm">Sustentabilidade</a></li>
+				            <li><a class="footerHeader" target="_blank" href="/EatonBR/OurCompany/index.htm">Nossa Empresa</a></li>
+				            <li><a target="_blank" href="http://www.eaton.com.br/EatonBR/OurCompany/AboutUs/index.htm">Quem Somos</a></li>
+				            <li><a target="_blank" href="http://www.eaton.com.br/EatonBR/OurCompany/NewsEvents/index.htm">Notícias &amp; Eventos</a></li>
+				            <li><a target="_blank" href="http://www.eaton.com.br/EatonBR/OurCompany/Operations/index.htm">Operações</a></li>
+				            <li><a target="_blank" href="http://www.eaton.com.br/EatonBR/OurCompany/ServiceProvider/index.htm">Serviço ao Fornecedor</a></li>
+				            <li><a target="_blank" href="http://www.eaton.com.br/EatonBR/OurCompany/WorkatEaton/index.htm">Trabalhe na Eaton</a></li>
+				            <li><a target="_blank" href="http://www.eaton.com.br/EatonBR/OurCompany/CorporateVideos/index.htm">Vídeos de visão geral corporativa</a></li>
+				            <li><a target="_blank" href="http://www.eaton.com.br/EatonBR/OurCompany/CorporateResponsibility/index.htm">Responsabilidade Corporativa</a></li>
+				            <li><a target="_blank" href="http://www.eaton.com.br/EatonBR/OurCompany/Sustainability/index.htm">Sustentabilidade</a></li>
 				        </ul>
 				    </div>
 				    <div class="footercolumn">
@@ -56,7 +56,7 @@
 				            </li>
 				            <li>
 				                <img alt="Eaton Newsfeeds" src="/img/public/rsslogo.gif" width="15" height="15" border="0">
-				                <a href="http://www.eaton.com.br/EatonBR/OurCompany/NewsEvents/PressReleases/index.htm">Eaton Notícias</a><br>
+				                <a target="_blank" href="http://www.eaton.com.br/EatonBR/OurCompany/NewsEvents/PressReleases/index.htm">Eaton Notícias</a><br>
 				                <img alt="LinkedIn logo" style="width: 16px; height: 16px" src="/img/public/pct_273093.gif">&nbsp;
 				                <a target="https://www.linkedin.com/company/eaton-corporation/" href="https://www.linkedin.com/company/eaton-corporation/">Eaton no Linkedin<br></a>
 				                <img alt="Youtube Icon Small" src="/img/public/pct_305742.gif">&nbsp;
@@ -66,9 +66,9 @@
 				    </div>
 				    <div class="footercolumn_last">
 				        <ul>
-				            <li><a class="footerHeader" href="http://www.eaton.com.br/EatonBR/SiteMap/index.htm">Mapa do Site</a></li>
-				            <li class="featureR"><a href="http://www.eaton.com.br/EatonBR/OurCompany/PolíticadePrivacidade/index.htm">Política de Privacidade</a></li>
-				            <li><a href="http://www.eaton.com.br/EatonBR/OurCompany/TermoseCondições/index.htm">Termos e Condições</a></li>
+				            <li><a class="footerHeader" target="_blank" href="http://www.eaton.com.br/EatonBR/SiteMap/index.htm">Mapa do Site</a></li>
+				            <li class="featureR"><a target="_blank" href="http://www.eaton.com.br/EatonBR/OurCompany/PolíticadePrivacidade/index.htm">Política de Privacidade</a></li>
+				            <li><a target="_blank" href="http://www.eaton.com.br/EatonBR/OurCompany/TermoseCondições/index.htm">Termos e Condições</a></li>
 				            <li class="copyright featureR">© 2017 Eaton<br>
 				                Todos os Direitos Reservados</li>
 				            </ul>
